...
            android:layout_marginTop="16dp"
            android:text="User Name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_pic" />

        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/owner_prompt"
            android:importantForAutofill="no" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/trigger_edit_user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_edit"
...
